<resources>
    <string name="app_name">偶得</string>
    <string name="action_settings">Settings</string>
    <string name="app_slogan">Thinking, Living.</string>
    <string name="app_copyright">©2017 IMOTTO.NET</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="loading">正在加载...</string>
    <string name="lbl_no_data_msg">没有可以显示的信息</string>
    <string name="lbl_no_data_mottos">还没有人发表偶得，点击右下角“+”号抢个沙发吧!</string>
    <string name="lbl_no_data_review">还没有人发表评论</string>
    <string name="lbl_no_data_vote">还没有人发表评价</string>
    <string name="lbl_no_data_album_motto">还未收录偶得</string>
    <string name="lbl_no_data_loved_mottos">没有喜欢的偶得</string>
    <string name="lbl_no_data_loved_album_gust">登录后才会显示喜欢的珍藏</string>
    <string name="lbl_no_data_loved_album">没有喜欢的珍藏</string>
    <string name="lbl_no_data_pmsg_gust">登录后才会显示收到的私信消息</string>
    <string name="lbl_no_data_pmsg">没有收到私信消息</string>
    <string name="lbl_no_data_notice_gust">登录后才会显示收到的提醒</string>
    <string name="lbl_no_data_notice">没有收到提醒消息</string>
    <string name="lbl_no_data_score">暂时没有积分记录</string>
    <string name="lbl_no_data_revenue">暂时没有金币收支记录</string>
    <string name="lbl_no_data_gifts">暂时没有可供兑换的礼品</string>
    <string name="lbl_no_data_mygift">暂时没有礼品兑换记录</string>
    <string name="lbl_no_data_my_mottos">没有已发表的偶得</string>
    <string name="lbl_no_data_other_mottos">%s未发表过偶得，或发表的偶得尚未结算</string>
    <string name="lbl_no_data_album">还没有创建珍藏</string>
    <string name="lbl_no_data_follows">没有发现%s喜欢的人</string>
    <string name="lbl_no_data_followers">还没有人喜欢%s</string>
    <string name="lbl_no_data_ban">没有拉黑的人</string>
    <string name="loaded">全部数据已加载</string>
    <string name="title_review">评论列表</string>
    <string name="title_collect_motto">加入珍藏</string>
    <string name="title_loved_mottos">%s喜欢的偶得</string>
    <string name="title_loved_albums">%s喜欢的珍藏</string>
    <string name="title_album_detail">%s的珍藏</string>
    <string name="title_user_mottos">%s的偶得</string>
    <string name="title_user_albums">%s的珍藏</string>
    <string name="title_user_score">%s的积分记录</string>
    <string name="title_user_revenue">%s的金币</string>
    <string name="title_user_rank">%s积分排行榜</string>
    <string name="title_user_gifts">我的礼品</string>
    <string name="title_user_awards">我的奖品</string>
    <string name="title_user_follows">%s喜欢的人</string>
    <string name="title_user_followers">喜欢%s的人</string>
    <string name="title_set_award_address">设置寄送地址</string>
    <string name="title_user_ban">黑名单</string>
    <string name="title_votes">偶得积分</string>
    <string name="title_user_setting">设置</string>
    <string name="title_pick_thumb">设置用户头像</string>
    <string name="title_add_album">创建珍藏</string>
    <string name="title_update_album">修改珍藏</string>
    <string name="title_gifts">礼品兑换</string>
    <string name="title_help_center">关于偶得</string>
    <string name="title_agreement">用户协议</string>
    <string name="title_review_gift">评价礼品</string>
    <string name="url_help_center">https://www.imotto.net/about.html</string>
    <string name="url_agreement">https://www.imotto.net/agreement.html</string>
    <string name="url_archive">https://www.imotto.net/download/archive?f=</string>
    <string name="dialog_title_archive">打包下载偶得作品</string>
    <string name="dialog_msg_archive">打包下载地址已生成，有效期七天，您想要?</string>
    <string name="hint_msg">输入消息内容</string>
    <string name="hint_motto">在这里，记下你的偶得…</string>
    <string name="hint_album_title">珍藏名称</string>
    <string name="hint_album_summary">珍藏简要说明</string>
    <string name="hint_mobile">请输入手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="btn_title_login">登录</string>
    <string name="lbl_forget_pass">忘记了密码？</string>
    <string name="lbl_register_now">注册一个账号</string>
    <string name="btn_title_gallery">现有照片</string>
    <string name="btn_title_camera">现在拍摄</string>
    <string name="hint_verify_code">验证码</string>
    <string name="lbl_send_vcode">发送验证码到手机</string>
    <string name="hint_user_name">请输入显示的用户名</string>
    <string name="hint_set_password">请设置登录密码</string>
    <string name="hint_reset_password">设置新的登录密码</string>
    <string name="btn_title_register">注册</string>
    <string name="btn_title_reset_pass">确定</string>
    <string name="lbl_agreement">注册即代表您同意《IMOTTO用户协议》</string>
    <string name="hint_review">输入评论内容</string>
    <string name="hint_orignal_pass">原密码</string>
    <string name="hint_new_pass">新密码</string>
    <string name="hint_rel_account_no">账号</string>
    <string name="hint_rel_account_name">用户名称</string>
    <string name="seg_album_explore">发现</string>
    <string name="seg_album_loved">喜欢</string>
    <string name="seg_msg_private">私信</string>
    <string name="seg_msg_notice">提醒</string>
    <string name="lbl_his_mottos">他的偶得</string>
    <string name="lbl_his_follows">他喜欢的人</string>
    <string name="lbl_his_followers">喜欢他的人</string>
    <string name="lbl_zero">0</string>
    <string name="lbl_norelation">匆匆过客</string>
    <string name="lbl_youlikehim">你喜欢TA</string>
    <string name="lbl_helikeyou">TA喜欢你</string>
    <string name="lbl_mutuallike">互相喜欢</string>
    <string name="lbl_donotlike">不喜欢TA</string>
    <string name="lbl_embrassed">尴尬关系</string>
    <string name="lbl_reivew_gift">您的评价将决定此礼品后期会否继续提供，以及此赞助商资格的存续，敬请公正客观。</string>
    <string name="hint_review_gift">填写评价信息</string>
</resources>
